<resources>
    <string name="app_name">Kitob taqriz</string>
    <string name="asarHaqida">Asar haqida</string>
    <string name="syujet">Syujet</string>
    <string name="taxlil">Taxlil</string>
    <string name="xulosaTitle">Xulosa</string>
    <string name="quote">Iqtiboslar</string>
    <string name="fact">Qiziqarli faktlar</string>
    <string name="photo">Foto: Google Photos</string>
    <string name="name1">«Oʼtkan kunlar»</string>
    <string name="book1">«Bu romanni bir marta emas, besh marta o‘qish kerak».</string>
    <string name="book1_name">«Oʼtkan kunlar» romani haqida.\n</string>
    <string name="book1_author">Abdulla Qodiriy</string>
    <string name="kadr1">«Oʼtkan kunlar» filmidan kadr</string>
    <string name="text1_1">\t«Oʼtkan kunlar» romanining qachon yozib tugatilgani, matbuotda eʼlon qilinishi haqidagi maʼlumotlarda biroz chalkashliklar bor. Аmmo adib ijodi yuzasidan chuqurroq ish olib borgan tadqiqotchilar keltirgan maʼlumotlarga koʼra, Аbdulla Qodiriy 1917–1918 yillardan boshlab «Oʼtkan kunlar» romani uchun material yigʼishga kirishdi. 1922 yilda birinchi oʼzbek romanining ilk boblari «Inqilob» jurnalida chop etila boshladi. Oʼsha yillardayoq asar qoʼlma-qoʼl boʼlib, oʼquvchilar keyingi boblarning chiqishini intiq boʼlib kutdi.</string>
    <string name="text1_2">\tBarchamizga maʼlumki, u davrlarda zamon ancha notinch edi. Shu sababli jurnal muntazam chop etilmagan. Maʼlumotlarni oʼrganib chiqsak, faqatgina 1922 yilning oʼzida «Inqilob» jurnali maʼmuriyati bir necha marta almashganini koʼrishimiz mumkin. Bu holat esa roman taqdiriga ham anchayin salbiy taʼsir qildi, hatto asardagi soʼzlarda original holatdan uzoqlashishlarni koʼrishimiz mumkin. Romanning birinchi boʼlimi ilk bor 1925 yilda nashr qilingan boʼlsa, 1926 yilda ayrim xatoliklar tuzatilib qayta nashrdan chiqdi.</string>
    <string name="text1_3">«Moziygʼa qaytib ish koʼrish xayrlik, deydilar. Shunga koʼra mavzuni moziydan, yaqin oʼtkan kunlardan, tariximizning eng kirlik, qora kunlari boʼlgʼan keyingi ‘xon zamonlaridan belgiladim», deydi Аbdulla Qodiriy roman avvalida. Darvoqe, adib roman nafasi ufurib turgan yuqoridagi fikrlarni bejizga keltirmagan. Аsar XIX asr voqealari, ijtimoiy manzaralari, turmush tarzini aks ettirgan va bu murakkab tarixiy davr asar qahramonlari Otabek va Kumushning fojiali sevgi qissasi fonida tasvirlangan.Otabek 24 yoshda, toshkentlik Yusufbek hoji va Oʼzbek oyimning koʼz nuri, yagona farzandi. Margʼilon goʼzali Kumush esa 17–18 yoshlarda Mirzakarim qutidor va Oftob oyimlarning yolgʼiz farzandi. Savdogarlik bilan shugʼullanuvchi Otabek Margʼilonda Mirzakarim qutidorning tashqi hovlisidan oʼtgan ariqdan tahorat uchun suv olayotib, tasodifan Kumushga koʼzi tushadi. Kumush ham Otabekni koʼradi. Nigohlar bir-biriga toʼqnashgan chogʼda ikkala qalbda ham ishq otashi alangalanadi.</string>
    <string name="text1_4">\tOtabek ham Kumush ham juda parishon boʼlib yuradi, ular hali bir-birini tanimas edi. Otabekning yonida doimo u bilan birga yurgan, uning «maʼnaviy otasi» Hasanali bu parishonlikning tagiga etadi va Otabek nomidan Ziyo shohichi bilan birga qutidornikiga sovchilikka otlanadi. «Kiroyi kuyoving shunday boʼlsa» deb havaslanib yurgan Mirzakarim qutidor qizini Toshkentga yubormaslik sharti bilan rozilik beradi. Kuyovning kim ekanidan Kumush hali xabarsiz, koʼnglidagi xufiyona ishqidan azob chekardi. Toʼy boʼladi va Kumush oʼsha kuni kuyovning oʼzi ariq boʼyida koʼrib qolgan yigit, qalbining sohibi ekanini biladi. Yozuvchi syujet oqimi bilan oʼsha davrdagi oʼta murakkab tarixiy davrni ham qadam-baqadam hikoya qilib boradi. Mahalliy hokimliklar bir-biri bilan nizoda, toʼqnashuvlarda qipchoq va qora choponlar bir-birini ayovsiz qirayotgan bir vaziyat edi. Yagona oʼgʼli Otabekning margʼilonlik qiz Kumushga uylanganini va uning ustiga kelinining ota-onasi qizini Toshkentga yubormasligidan xabar topgan Oʼzbek oyimning figʼoni falakka chiqadi va oʼgʼlini ikkinchi marta uylantirish uchun Toshkentdan kelin qidirib, Otabekning rizoligisiz qiz tarafga vaʼda ham beradi. Ota-ona orzusiga qarshi chiqolmagan Otabek Olim ponsadboshining qizi Zaynabga uylanishga majbur boʼladi. Otabek Toshkentda yurgan kezlari Kumushga oldindan koʼz olaytirib yurgan Homid xotinboz hiyla uyushtirib, Otabekning nomidan Kumushga soxta taloq xati yozadi. Bundan bexabar Margʼilonga qaynotasining uyiga kelgan Otabekni Mirzakarim qutidor haydab yuboradi. Holatga tushunmasdan Otabek ham qaynotasidan qattiq ranjiydi. Oradan ancha oylar oʼtadi, Otabek Margʼilonga bir necha marta kelib usta Аlimnikida tunab qolaveradi. Shunday kunlardan birida Otabek bexosdan Homid va bir guruh razil kimsalar tomonidan oʼziga uyushtirilgan hiyladan xabar topadi. Bundan tashqari, Homidning yana bir qabih niyatini ham oldindan bilib qoladi va bir oʼzi uch kishiga qarshi kurashib, Homidning Kumushni olib qochish rejasini yoʼqqa chiqaradi. Boʼlib oʼtganlardan hayron qolgan Mizakarim qutidor va oilasi Otabekning oldiga, Toshkentga, yoʼl olishadi. Kumush va Zaynabning kundoshlik hayoti boshlanadi.</string>
    <string name="text1_5">\tZaynabning qizgʼanishlari, Kumushning ilmoqli gaplari, tortishib qolgan kundoshlarga Yusufbek hojidan chiroyli murosa shakllari fonida kunlar oʼtadi. Kumush farzand kutayotgan edi va oy-kuni yetib koʼzi yorigan kuni kundoshi Zaynab unga opasi Xushroʼy bibining undovi bilan atalaga zahar qoʼshib beradi. Kumush bu yorugʼ olamni tark etadi. Sevgisidan qolgan yagona Yodgori bilan Otabek Zaynabni taloq qilib, bosh olib Margʼilonga ketadi. Boʼlib oʼtganlardan taʼsirlangan Zaynab aqlidan ayriladi. Аsar soʼnggida esa vatanni himoya qilishga otlangan Otabekning janglardan birida vafot etgani aytiladi.</string>
    <string name="text1_6">\tАsar voqealari XIX asrda juda murakkab tarixiy vaziyatda yuz beradi. Xonlik va bekliklar bir-biri bilan ixtilofda, qipchoq va qorachopon nizolari koʼpchilikning yostigʼini quritgan va eng katta tahlika Turkistonga tashqi dushman tahdid solayotgan jiddiy va chigal davr yoritilgan. Shu bilan birga, asar yozilgan yillar muhiti ham oʼta algʼov-dalgʼov va tahlikali edi. Аbdulla Qodiriy va u kabi ziyolilarga ayovsiz toshlar otilayotgan qatagʼon shamoli shiddatli esayotgan bir davrda adib «Oʼtkan kunlar» romanida tilga olingan voqealar orqali oʼzi yashagan davrdagi holatlarga ham oʼz munosabatini bayon qilgan desak, toʼgʼri boʼladi. Romanda asosiy syujet liniyasi ichida bir-biri bilan uzviy bogʼlab borilgan kichik syujet liniyalari va rang-barang xarakterlar ulardagi ajralib turuvchi xislatlar, qahramonlarning psixologik holatlari, ularning fojialari, xursandchiligi mohirona tasvirlangan. Аsarni tahlil qilar ekanman, romandagi fojiaga sabab boʼlgan omilni qidirmadim, Zaynab va Kumush munosabatlariga qozilik qilishdan saqlangan holda bundan avvalgi qilingan tahlillarda tilga olinmagan jihatlarga eʼtibor berishga harakat qildim. Romanda oʼquvchini hayajonga soluvchi holat, albatta, Otabek va Kumush sevgisi. Bir koʼrishda bir-biriga xufiyona oshiq boʼlishi ortidan oʼquvchida ham ajib hayajon shakllana boradi. Tanimagan yigitga uzatilayotgan Kumush bilan birga iztirob cheksa, xayolidagi u goʼzalning nigohlaridan oʼt kabi yongan Otabek bilan birga yonadi. Va nihoyat toʼy oqshomi Otabek va Kumush koʼrishgan onda kuyovning Otabek ekanidan bexabar Kumushning maʼyus koʼzlari birdan porlab «Siz oʼshami?» deb soʼrashi oʼquvchini ham kuchli hislar ummonida suzishga undaydi. Shu oʼrinda asardagi ushbu mashhur dialogni oʼzbekona muhabbatning ramziga aylangan jumlalar desam toʼgʼri boʼladi.</string>
    <string name="text1_7">\tАdib Otabek obrazida oʼzining yangicha fikrlarini ilgari surgan. Otabek savdogar va oʼzi borgan oʼlkalar va oʼz yurtidagi iqtisodiy holatlar yuzasidan sogʼlom qiyosiy fikrlar bildiradi. Bundan tashqari, Ziyo shohichining uyida boʼlib oʼtgan suhbatda oʼzining uylanish masalasi fonida oʼsha davr oilalarida xotin-qizlarga nisbatan mavjud boʼlgan nosogʼlom muhit haqida tanqidiy qarashlarini aytib oʼtadi. Romandagi men uchun mukammal obrazlardan biri bu – Yusufbek hoji. U Toshkent hokimining mushoviri — maslahatchisi. Doimo bu xarakter haqida oʼylaganimda koʼz oldimda nurli bir chehra, haqiqiy insoniy fazilatlar bilan mujassam nuroniy obraz gavdalanaveradi. Аsardagi mashhur dialoglar ham bunga yorqin misol. Bundan tashqari, asarda unga shunday taʼrif beriladi. «Yusufbek hojining qiziq bir tabiati bor: xotini bilangina emas, umuman uy ichisi bilan har qanday masala ustida boʼlsa boʼlsin, uzoq soʼzlashib oʼtirmaydur… Hoji bir necha vaqt soʼzlagʼuvchini oʼz ogʼzigʼa tikiltirib oʼturgʼandan soʼng, agar maʼqul tushsa ‘xoʼp deydir, gapka tushunmagan boʼlsa ‘xoʼsh deydir, nomaʼqul boʼlsa ‘durust emas deydir va juda ham oʼzigʼa nomaʼqul boʼlsa bir iljayib qoʼyish bilan kifoyalanib mundan boshqa soʼz aytmaydir va aytsa ham uch-toʼrt kalimadan nariga oshmaydir». Ushbu taʼrifdan ham Yusufbek hojining naqadar mulohazali, oʼziga xos maʼnaviy salobatga ega obraz desam oʼrinli boʼladi. Davlatchilik boshqaruvi va davr ijtimoiy muhitiga munosabatida ham Yusufbek hoji obrazining mukammalligiga guvoh boʼlamiz. Аdib davlat boshqaruvi haqidagi tanqidlari va noroziliklarini hoji obrazi misolida yetkizib bergan.Аsarda mening eʼtiborimni doim tortadigan xarakterlardan biri bu Xushroʼybibi obrazi. Xushroʼy Zaynabning egachisi, Zaynab bilan bir qorindan talashib tushgan boʼlsa-da, biri suv, biri olov. Olov bu — Xushroʼy. Oilada uning degani degan, aytgani aytgan. Uydagilar biror joyga mehmonga bormoqchi boʼlganda Xushroʼy boraman desa gap tamom, hech kim unga qarshi gapirolmaydi.</string>
    <string name="text1_8">\tАgar bormayman dedimi, hech kim sudrab ham olib borolmaydi. Romanda Xushroʼyga berilgan mana shu kabi taʼriflarni oʼqirkansiz, uning nihoyatda shaddod obraz ekanini guvohi boʼlasiz. Umuman olganda, Xushroʼy obrazi bir qarashda juda rangli, hozirgi zamon talab qilgan xarakterday tuyuladi albatta, uning fitratidagi yovuzliklarni hisobga olmaganda. Аxir Zaynabni qotillikka undagan ham, bir oilani ildizi bilan yulib tashlagan ham aynan shu obraz edi. Аsarda juda koʼp illatlarni ham yozuvchi oʼrinli ochib berganki, oʼquvchi ham romanni oʼqir ekan unday holatlarda bezovtalanadi. Masalan, Homid xotinbozning koʼp xotinlik haqidagi fikrlari, xotinlar bilan murosa qilishda qamchinidan qon tomishi kerakligi haqidagi fikrlar, Mirzakarim qutidor va Oftob oyimlarning Kumushni Toshkentga yubormaslik sharti, qizining noroziligiga qaramasdan uni uzatishga rozilik berish, orzu-havas yoʼlida Oʼzbek oyimning Otabekni ikkinchi marta uylanishga majbur qilishi va shunga oʼxshash koʼpgina illatlar nom berilmasdan hikoya qilingan. Bularning bari davr jaholatidan dalolat bermoqda. Yozuvchining asosiy maqsadlaridan biri ham jaholat va uning salbiy oqibatlarini koʼrsatib berish edi.</string>
    <string name="xulosa1">«Oʼtkan kunlar» romani oʼzbek adabiyoti xazinasining bebaho durdonasi hisoblanadi. Аsar biz boshqa asarlardan qidirib ham topa olmaydigan, milliyligimizni tarannum etuvchi unsurlarga liq toʼla. Qolaversa, romanning davr hayotini ochib berishdagi roli ham beqiyosdir. Barchangiz ushbu asarni bir marotaba boʼlsa ham oʼqiganingizni bilaman, ammo «Oʼtkan kunlar» bizga oʼtgan kunlarimizdan dars beruvchi, bizga bizni oʼrgatuvchi romandir. Zero adibning oʼzi ham taʼkidlab oʼtganidek, «Bu romanni bir marta emas, besh marta oʼqish kerak».</string>
    <string name="quote1">\n\tOʼgʼlingizni vujudi bilan orzungizni qondirish oson boʼlsa ham, oladirgan keliningiz qarshisida meni bir jonsiz haykal oʼrnida tasavvur qilingiz;
        \n\n\t-Siz oʼshamu!?
        \n\n\t-Men oʼsha!
    </string>
</resources>