<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="#673AB7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_arrow_back" />

            <TextView
                android:id="@+id/text_content"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:gravity="center|start"
                tools:text="@string/name1"
                android:textStyle="italic"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#efe5fd">
        
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/asarHaqida"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/text1_1"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"/>

            <ImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/image1_1"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/kadr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/kadr1"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:textColor="#b0bec5"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/text1_2"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/syujet"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/text1_3"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"/>
            <ImageView
                android:id="@+id/image2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/image1_2"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/kadr2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/kadr1"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:textColor="#b0bec5"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/text1_4"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"/>
            <ImageView
                android:id="@+id/image3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/image1_3"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/kadr3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/kadr1"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:textColor="#b0bec5"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/text1_5"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/taxlil"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/text1_6"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"/>
            <ImageView
                android:id="@+id/image4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/image1_4"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/kadr4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/kadr1"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:textColor="#b0bec5"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/text1_7"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"/>
            <ImageView
                android:id="@+id/image5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/image1_5"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/kadr5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/kadr1"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:textColor="#b0bec5"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/text1_8"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/xulosaTitle"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/xulosa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/xulosa1"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"/>

<!--            cardview for facts-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fact"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="22sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/fact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/fact"
                        android:textSize="16sp"
                        android:layout_margin="10dp"
                        android:justificationMode="inter_word"/>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

<!--            card view for quotes-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quote"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="22sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/quote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/quote1"
                        android:textSize="16sp"
                        android:layout_margin="10dp"
                        android:justificationMode="inter_word"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>